# ChangeLog for kde-base/kpasswdserver
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kpasswdserver/ChangeLog,v 1.6 2008/04/03 21:22:30 philantrop Exp $

*kpasswdserver-4.0.3 (03 Apr 2008)

  03 Apr 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +kpasswdserver-4.0.3.ebuild:
  Version bump to KDE 4.0.3. This is still not intended for mainstream so DO
  NOT KEYWORD IT without talking to the KDE herd first.

  20 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -kpasswdserver-4.0.1.ebuild:
  Old.

*kpasswdserver-4.0.2 (10 Mar 2008)

  10 Mar 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +kpasswdserver-4.0.2.ebuild:
  Version bump to KDE 4.0.2

  17 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -kpasswdserver-4.0.0.ebuild:
  Spring cleaning

*kpasswdserver-4.0.1 (06 Feb 2008)

  06 Feb 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +kpasswdserver-4.0.1.ebuild:
  Version bump to KDE 4.0.1.

*kpasswdserver-4.0.0 (18 Jan 2008)

  18 Jan 2008; Ingmar Vanhassel <ingmar@gentoo.org> +metadata.xml,
  +kpasswdserver-4.0.0.ebuild:
  Added KDE 4.0.0's kpasswdserver.
