@@ -1,0 +1,12 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kpasswdserver/Attic/kpasswdserver-4.0.4.ebuild,v 1.1 2008/05/16 00:09:32 ingmar Exp $
+
+EAPI="1"
+
+KMNAME=kdebase-runtime
+inherit kde4-meta
+
+DESCRIPTION="KDED Password Module"
+KEYWORDS="~amd64 ~x86"
+IUSE="debug"
